--- a/difficulty_metrics.ipynb
+++ b/difficulty_metrics.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Difficulty Exploration"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,6 +10,13 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "import spacy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Difficulty Exploration"
    ]
   },
   {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
       "text/plain": "2.0    123\n4.0     99\n6.0     47\n8.0     19\nName: skill_level, dtype: int64"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 2
     }
    ],
    "source": [
@@ -284,7 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save concise annotated verb list\n",
+    "verb_annot.to_csv('data/concise_verbs.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,13 +321,7 @@
     "    for tok in doc:\n",
     "        if tok.pos_ == 'VERB' and tok.dep_ == 'ROOT':\n",
     "            actions += 1\n",
-    "    return actions\n",
-    "\n",
-    "def difficulty(method_string):\n",
-    "    '''\n",
-    "    returns actions plus weights for a difficulty rating\n",
-    "    '''\n",
-    "    return manual_difficulty_weighting(method_string) + action_counter(method_string)"
+    "    return actions"
    ]
   },
   {
@@ -348,26 +352,6 @@
     "    asl = n_words / n_sents\n",
     "    readability = 100 * rlw + asl\n",
     "    return round(readability)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Total Effort Metric"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def effort(method_string, difficulty_weight = 1):\n",
-    "    '''\n",
-    "    returns engineered effort metric, difficulty weighted by user input\n",
-    "    '''\n",
-    "    return readability_score(method_string) + difficulty_weight * difficulty(method_string)"
    ]
   }
  ],
