--- a/difficulty_metrics.ipynb
+++ b/difficulty_metrics.ipynb
@@ -34,13 +34,98 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "                                         title  \\\n0              Lentil, Apple, and Turkey Wrap    \n1  Boudin Blanc Terrine with Red Onion Confit    \n2                Potato and Fennel Soup Hodge    \n3             Mahi-Mahi in Tomato Olive Sauce    \n4                    Spinach Noodle Casserole    \n\n                                              method  \\\n0  1. Place the stock, lentils, celery, carrot, t...   \n1  Combine first 9 ingredients in heavy medium sa...   \n2  In a large heavy saucepan cook diced fennel an...   \n3  Heat oil in heavy large skillet over medium-hi...   \n4  Preheat oven to 350°F. Lightly grease 8x8x2-in...   \n\n                                         ingredients  url  \n0  ['4 cups low-sodium vegetable or chicken stock...  NaN  \n1  ['1 1/2 cups whipping cream', '2 medium onions...  NaN  \n2  ['1 fennel bulb (sometimes called anise), stal...  NaN  \n3  ['2 tablespoons extra-virgin olive oil', '1 cu...  NaN  \n4  ['1 12-ounce package frozen spinach soufflé, t...  NaN  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>method</th>\n      <th>ingredients</th>\n      <th>url</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Lentil, Apple, and Turkey Wrap</td>\n      <td>1. Place the stock, lentils, celery, carrot, t...</td>\n      <td>['4 cups low-sodium vegetable or chicken stock...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Boudin Blanc Terrine with Red Onion Confit</td>\n      <td>Combine first 9 ingredients in heavy medium sa...</td>\n      <td>['1 1/2 cups whipping cream', '2 medium onions...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Potato and Fennel Soup Hodge</td>\n      <td>In a large heavy saucepan cook diced fennel an...</td>\n      <td>['1 fennel bulb (sometimes called anise), stal...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Mahi-Mahi in Tomato Olive Sauce</td>\n      <td>Heat oil in heavy large skillet over medium-hi...</td>\n      <td>['2 tablespoons extra-virgin olive oil', '1 cu...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Spinach Noodle Casserole</td>\n      <td>Preheat oven to 350°F. Lightly grease 8x8x2-in...</td>\n      <td>['1 12-ounce package frozen spinach soufflé, t...</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>method</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lentil, Apple, and Turkey Wrap</td>\n",
+       "      <td>1. Place the stock, lentils, celery, carrot, t...</td>\n",
+       "      <td>['4 cups low-sodium vegetable or chicken stock...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Boudin Blanc Terrine with Red Onion Confit</td>\n",
+       "      <td>Combine first 9 ingredients in heavy medium sa...</td>\n",
+       "      <td>['1 1/2 cups whipping cream', '2 medium onions...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Potato and Fennel Soup Hodge</td>\n",
+       "      <td>In a large heavy saucepan cook diced fennel an...</td>\n",
+       "      <td>['1 fennel bulb (sometimes called anise), stal...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mahi-Mahi in Tomato Olive Sauce</td>\n",
+       "      <td>Heat oil in heavy large skillet over medium-hi...</td>\n",
+       "      <td>['2 tablespoons extra-virgin olive oil', '1 cu...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Spinach Noodle Casserole</td>\n",
+       "      <td>Preheat oven to 350°F. Lightly grease 8x8x2-in...</td>\n",
+       "      <td>['1 12-ounce package frozen spinach soufflé, t...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         title  \\\n",
+       "0              Lentil, Apple, and Turkey Wrap    \n",
+       "1  Boudin Blanc Terrine with Red Onion Confit    \n",
+       "2                Potato and Fennel Soup Hodge    \n",
+       "3             Mahi-Mahi in Tomato Olive Sauce    \n",
+       "4                    Spinach Noodle Casserole    \n",
+       "\n",
+       "                                              method  \\\n",
+       "0  1. Place the stock, lentils, celery, carrot, t...   \n",
+       "1  Combine first 9 ingredients in heavy medium sa...   \n",
+       "2  In a large heavy saucepan cook diced fennel an...   \n",
+       "3  Heat oil in heavy large skillet over medium-hi...   \n",
+       "4  Preheat oven to 350°F. Lightly grease 8x8x2-in...   \n",
+       "\n",
+       "                                         ingredients  url  \n",
+       "0  ['4 cups low-sodium vegetable or chicken stock...  NaN  \n",
+       "1  ['1 1/2 cups whipping cream', '2 medium onions...  NaN  \n",
+       "2  ['1 fennel bulb (sometimes called anise), stal...  NaN  \n",
+       "3  ['2 tablespoons extra-virgin olive oil', '1 cu...  NaN  \n",
+       "4  ['1 12-ounce package frozen spinach soufflé, t...  NaN  "
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -53,12 +138,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "'Peel a wide strip from around the middle of each potato. In a kettle combine potatoes and garlic with enough salted water to cover by 2 inches and boil until potatoes are just tender, about 15 minutes. Drain mixture. Transfer potatoes to a bowl and transfer garlic to a blender. Add to blender lemon juice, oil, and salt and pepper to taste and purée dressing. In the bowl toss potatoes with dressing and parsley. Potatoes may be prepared 4 hours ahead and kept covered. Serve potatoes warm or at room temperature.'"
+      "text/plain": [
+       "'Peel a wide strip from around the middle of each potato. In a kettle combine potatoes and garlic with enough salted water to cover by 2 inches and boil until potatoes are just tender, about 15 minutes. Drain mixture. Transfer potatoes to a bowl and transfer garlic to a blender. Add to blender lemon juice, oil, and salt and pepper to taste and purée dressing. In the bowl toss potatoes with dressing and parsley. Potatoes may be prepared 4 hours ahead and kept covered. Serve potatoes warm or at room temperature.'"
+      ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -75,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,12 +350,18 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "2.0    123\n4.0     99\n6.0     47\n8.0     19\nName: skill_level, dtype: int64"
+      "text/plain": [
+       "2.0    123\n",
+       "4.0     99\n",
+       "6.0     47\n",
+       "8.0     19\n",
+       "Name: skill_level, dtype: int64"
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -294,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
